--- a/IESA_ROOT/notifications/templates/notifications/notification_list.html
+++ b/IESA_ROOT/notifications/templates/notifications/notification_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container-limited">
     <div class="text-center mb-5">
-        <h6 class="section-title mb-4" style="display: block;">NOTIFICATIONS</h6>
+        <h6 class="section-title d-block mb-4">NOTIFICATIONS</h6>
     </div>
     <div class="d-flex justify-content-between align-items-center mb-4">
         {% if unread_count > 0 %}
