--- a/IESA_ROOT/users/templates/users/profile.html
+++ b/IESA_ROOT/users/templates/users/profile.html
@@ -8,7 +8,7 @@
 <div class="profile-page py-5">
     <div class="container container-profile">
         <div class="row justify-content-center">
-            <div class="col-12" style="max-width: 1200px;">
+            <div class="col-12 max-w-1200">
                 <!-- Profile Header -->
                 <div class="profile-header mb-5">
                     <div class="row g-4">
