--- a/IESA_ROOT/users/templates/users/profile_edit.html
+++ b/IESA_ROOT/users/templates/users/profile_edit.html
@@ -10,7 +10,7 @@
             <div class="card card-modern">
                 <div class="card-body p-4">
                     <div class="text-center mb-4">
-                        <h6 class="section-title mb-4" style="display: block;">EDIT PROFILE</h6>
+                        <h6 class="section-title d-block mb-4">EDIT PROFILE</h6>
                     </div>
                     
                     <form method="post" enctype="multipart/form-data">
@@ -50,7 +50,7 @@
                         </div>
 
                         <hr>
-                        <h6 class="section-title mb-3" style="display: block;">SOCIAL & LINKS</h6>
+                        <h6 class="section-title d-block mb-3">SOCIAL & LINKS</h6>
                         <div class="mb-3">
                             <label for="id_github_url" class="form-label">GitHub</label>
                             {{ form.github_url }}
